--- a/ByteBank.SistemaAgencia/ByteBank.SistemaAgencia.csproj
+++ b/ByteBank.SistemaAgencia/ByteBank.SistemaAgencia.csproj
@@ -55,6 +55,11 @@
     <Compile Include="ListaDeObject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Streams\1_LidandoComStreamDiretamente.cs" />
+    <Compile Include="Streams\2_UsandoStreamReader.cs" />
+    <Compile Include="Streams\3_CriandoArquivo.cs" />
+    <Compile Include="Streams\4_StreamBinario.cs" />
+    <Compile Include="Streams\5_UsandoStreamDeEntradaDaConsole.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -65,6 +70,14 @@
       <Project>{c2175f0d-7024-465e-947f-c0fb51887a9c}</Project>
       <Name>ByteBank.Modelos</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="contas.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="teste.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
